--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "express-session": "^1.17.3",
     "mysql2": "^2.3.3",
     "sequelize": "^6.21.3"
+  },
+  "engines": {
+    "node": "16.16.0"
   }
 }
